# creative-forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  PLAYBOOK.md  README.md  SECURITY.md  capabilities.example.json  metrics-source.example.json  providers.yaml  publish-readback-envelope.example.json  publish-receipt.example.json  pyproject.toml  readiness.example.json  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml
apps/: sunrise-demo.yaml
assets/sunrise-demo/: registry.yaml
audiences/: sunrise-demo.yaml
briefs/sunrise-demo/: demo-pilot.yaml
docs/: GETTING-STARTED.md
docs/demo/: PRODUCT.md
docs/demo/app-resources/en.lproj/: Localizable.strings
docs/demo/app-resources/es.lproj/: Localizable.strings
docs/demo/fastlane-metadata/en-US/: name.txt
recipes/sunrise-demo/: morning-walk.yaml
recipes/sunrise-demo/video/: morning-ritual.yaml
remotion/: package-lock.json  package.json  tsconfig.json
remotion/src/: CreativeVideo.tsx  Root.tsx  types.ts
scripts/: __init__.py  assets.py  audiences.py  briefs.py  dashboard.py  experiments.py  forge.py  higgsfield.sh  higgsfield_video.py  host_assets.py  install-skill.sh  locales.py  paths.py  publish.py  qa.py  render.py  research.py  signals.py  validate.py  video.py  video_mining.py  video_qa.py
signals/: sunrise-demo.yaml
skill/criar-criativos/: SKILL.md
swipe/: _video-pattern-template.yaml
swipe/sunrise-demo/: competitors.yaml  video-patterns.yaml
templates/image/app-screenshot-proof/: meta.yaml  template.html
templates/image/challenge-invite/: meta.yaml  template.html
templates/image/pain-headline-cta/: meta.yaml  template.html
templates/image/review-quote/: meta.yaml  template.html
templates/image/verse-hero/: meta.yaml  template.html
templates/video/modular-story/: meta.yaml
tests/: qa_fixtures.py  test_assets.py  test_audiences.py  test_briefs.py  test_dashboard.py  test_experiments.py  test_forge_video.py  test_higgsfield_video.py  test_host_assets.py  test_locales.py  test_packaging.py  test_paths.py  test_pipeline.py  test_publish_experiment_hardening.py  test_qa.py  test_render.py  test_research.py  test_signals.py  test_skill_contract.py  test_swipe_fidelity.py  test_validate.py  test_video.py  test_video_mining.py  test_video_qa.py
